product_docs/docs/bart/2.5.3/bart_ref/01_bart_subcommands_examples/index.mdx
---
title: "BART Subcommand Syntax and Examples"
---

<div id="using_bart_subcommands" class="registered_link"></div>


This section briefly describes each BART subcommand and provides an example.

**Invoking BART**

BART subcommands are invoked at the Linux command line. You can invoke the `bart` program (located in the `<BART_HOME>/bin` directory) with the desired options to manage your BART installation.

The following examples demonstrate ways of invoking BART. In these examples, the BART user account is named `bartuser`.

    $ su bartuser
    Password:
    $ export
    LD_LIBRARY_PATH=/opt/PostgresPlus/9.5AS/lib/:$LD_LIBRARY_PATH
    $ ./bart SHOW-SERVERS

To run BART from any current working directory:

    $ su bartuser
    Password:
    $ export
    LD_LIBRARY_PATH=/opt/PostgresPlus/9.5AS/lib/:$LD_LIBRARY_PATH
    $ bart SHOW-SERVERS

**Syntax for invoking BART**

    bart [ <general_option> ]... [ <subcommand> ] [<subcommand_option>]...

You can use either abbreviated or long option forms on the command line (for example `-h` or `--help`).

**General Options**

You can specify the following general options with `bart`.

`-h` or (`--help`)

> -   Displays general syntax and information about BART usage.
> -   All subcommands support a help option (`-h, --help`). If the help option is specified, information is displayed regarding that particular subcommand. The subcommand, itself, is not executed.

The following code sample displays information about the result of invoking the `--help` option for the `BACKUP` subcommand:

    -bash-4.2$ bart BACKUP --help
    bart: backup and recovery tool

    Usage:
    bart BACKUP [OPTION]...

    Options:
    -h, --help Show this help message and exit
    -s, --server Name of the server or 'all' (full backups only) to specify all servers
    -F, --format=p|t Backup output format (tar (default) or plain)
    -z, --gzip Enables gzip compression of tar files
    -c, --compress-level Specifies the compression level (1 through 9, 9 being
         best compression)
    --backup-name Specify a friendly name for the current backup
    --parent Specify parent backup for incremental backup
    --check Verify checksum of required mbm files

`-v` (or `--version`)

The following code sample displays information about version while executing the BART version subcommand.

    [edb@localhost bin]$ bart --version
    bart (EnterpriseDB) 2.5.2
    [edb@localhost bin]$

`-d` (or `--debug`)

The following code sample displays information about debugging output while executing the BART manage subcommand.

    -bash-4.1$ bart -d MANAGE -n
    DEBUG: Server: acctg, Now: 2015-04-17 16:34:03 EDT, RetentionWindow:
    259200 (secs) ==> 72 hour(s)
    DEBUG: Server: dev, Now: 2015-04-17 16:34:03 EDT, RetentionWindow:
    1814400 (secs) ==> 504 hour(s)
    DEBUG: Server: hr, Now: 2015-04-17 16:34:03 EDT, RetentionWindow:
    7776000 (secs) ==> 2160 hour(s)

`-c` (or `--config-path) <config_file_path>`

The following code sample displays information about including the `-c` option with the configuration file name and path. This option is used if you do not want to use the default BART configuration file `BART_HOME/etc/bart.cfg`.

    $ su bartuser
    Password:
    $ export
    LD_LIBRARY_PATH=/opt/PostgresPlus/9.5AS/lib/:$LD_LIBRARY_PATH
    $ bart -c /home/bartuser/bart.cfg SHOW-SERVERS

<div class="toctree" maxdepth="5">

backup check\_config delete init manage restore show\_servers show\_backups verify\_chksum running\_the\_bart\_wal\_scanner

</div>
